--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar-section">
             <div class="logo">
-                <img src="assets/logo-navbar.png" alt="">
+                <img src="./assets/logo-navbar.png" alt="">
             </div>
             <ul class="menu-items">
                 <li><a href="">Features</a></li>
@@ -31,12 +31,51 @@
                 <p>A private space to store notes, links, and learning summaries — designed to
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 <div class="button-content">
-                    <a href="" class="btn-primary">Start Building Your Vault <i class="fa-solid fa-arrow-right-long"></i></i></a>
+                    <a href="" class="btn-primary">Start Building Your Vault <i
+                            class="fa-solid fa-arrow-right-long"></i></i></a>
                     <a href="" class="btn-secondary"><i class="fa-solid fa-play"></i> See How It Works</a>
                 </div>
             </div>
         </div>
     </header>
+    <main>
+        <section class="notes-section">
+            <h2 class="notes-title">Notes Don't Fail, Structure Does.</h2>
+            <p class="notes-subtitle">You're not bad at learning. Your tools just weren't built for how knowledge
+                actually works.</p>
+
+            <div class="card-tainer">
+                <div class="card">
+                    <div class="icon-img">
+                        <img src="./assets/Vector.png" alt="">
+                        <h3>Scattered Notes</h3>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="icon-img">
+                        <img src="./assets/Bookmarks.png" alt="">
+                        <h3>Bookmark Overload</h3>
+                        <p>Hundreds of saved links you'll never revisit or remember.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="icon-img">
+                        <img src="./assets/Brain.png" alt="">
+                        <h3>No Idea Connections</h3>
+                        <p>Insights stay isolated, never building into bigger understanding.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="icon-img">
+                        <img src="./assets/Info.png" alt="">
+                        <h3>Forgetting What You Lclsearned</h3>
+                        <p>Knowledge fades because there's no system to retain it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
